@@ -3,6 +3,7 @@ version 0.8+
 	* Changed hash computation method. This has a special case on numpy arrays
 	(for speed) and is more extensible through a __jug_hash__ hook
 	* Fix bug with Tasklets
+	* Fix shell subcommand in newer versions of ipython
 
 version 0.8 Sun Mar 27 2011 by luispedro
 	* Tasklets
